# claude-manager

./: Makefile  README.md  install.sh  pyproject.toml
claude_manager/: __init__.py  __main__.py  browse.py  carousel.py  cli.py  console.py  core.py  launch.py  render.py  summarize.py
tests/: test_core.py
