[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "claude-manager"
version = "0.1.0"
description = "Single-screen overview of Claude Code sessions and memory."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
dependencies = []

[project.scripts]
claude-manager = "claude_manager.cli:main"

[tool.setuptools]
packages = ["claude_manager"]
